--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -101,6 +101,7 @@
 
 <script>
   const mapBoxToken = '<%- process.env.MapBox_KEY %>'
+  console.log(mapBoxToken);
   const campground = <%- JSON.stringify(campground) %>
 </script>
 
